# onvif-rs

./: Cargo.toml
src/: discovery.rs  main.rs
